fixed off-center layout

--- a/trashure/static/css/styles.css
+++ b/trashure/static/css/styles.css
@@ -165,7 +165,7 @@ hr {
 #wrapper {
     background: rgba(191,212,217,0.5);
     margin: 10px auto;
-    padding: 0 80px 20px;
+    padding: 0 58px 20px 102px;
     overflow: hidden;
     width: 900px;
     -webkit-border-radius: 4px;
